# qdrant-cloud-public-api

./: .gitattributes  .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  hello.py  package-lock.json  package.example.json  package.json  plugin_config.py  pyproject.toml
.github/: CODEOWNERS  release-drafter.yml
.github/actions/publish-packages/: action.yml
.github/actions/shared-setup/: action.yml
.github/actions/spelling/: allow.txt  expect.txt  only.txt  patterns.txt
.github/workflows/: buf-ci.yaml  pr-workflow.yaml  release-draft.yaml  release-workflow.yaml  spelling.yaml  upload-python-package.yaml
docs/: auth.md  authorization.md  release.md
gen-test/go/qdrant/cloud/account/v1/accountv1connect/: account.connect.go
gen-test/go/qdrant/cloud/auth/v1/authv1connect/: auth.connect.go
gen-test/go/qdrant/cloud/billing/v1/billingv1connect/: billing.connect.go
proto/qdrant/cloud/account/v1/: account.proto
proto/qdrant/cloud/auth/v1/: auth.proto
proto/qdrant/cloud/auth/v2/: auth.proto
proto/qdrant/cloud/backup/v1/: backup.proto
proto/qdrant/cloud/billing/v1/: billing.proto
proto/qdrant/cloud/booking/v1/: booking.proto
proto/qdrant/cloud/booking/v2/: booking.proto
proto/qdrant/cloud/cluster/auth/v1/: dashboard_api_key.proto  database_api_key.proto  ephemeral_dashboard_token.proto
proto/qdrant/cloud/cluster/auth/v2/: database_api_key.proto
proto/qdrant/cloud/cluster/auth/v3/: database_api_key.proto
proto/qdrant/cloud/cluster/backup/v1/: backup.proto
proto/qdrant/cloud/cluster/v1/: cluster.proto  database_api_key.proto
proto/qdrant/cloud/cluster/v2/: cluster.proto
proto/qdrant/cloud/common/v1/: common.proto
proto/qdrant/cloud/event/v1/: events.proto
proto/qdrant/cloud/featureflag/v1/: featureflag.proto
proto/qdrant/cloud/hybrid/v1/: hybrid_cloud.proto  operator.proto
proto/qdrant/cloud/iam/v1/: iam.proto
proto/qdrant/cloud/metering/v1/: metering.proto
proto/qdrant/cloud/monitoring/v1/: monitoring.proto
proto/qdrant/cloud/payment/v1/: payment.proto
proto/qdrant/cloud/platform/v1/: platform.proto
proto/qdrant/cloud/quota/v1/: quota.proto
proto/qdrant/cloud/serverless/collection/v1/: collection.proto  collection_config.proto
proto/qdrant/cloud/serverless/collections/v1/: collection_config.proto  collection_keys.proto  collections.proto
proto/qdrant/cloud/serverless/platform/v1/: platform.proto
proto/qdrant/cloud/serverless/project/v1/: project.proto
proto/qdrant/cloud/serverless/quota/v1/: quota.proto
proto/qdrant/cloud/serverless/space/v1/: space.proto
proto/qdrant/cloud/ui/v1/: clusterdata.proto  featureflags.proto  ui.proto
proto/qdrant/cloud/ui/v1beta1/: featureflags.proto
proto/serverless/clusters/v1/: clusters.proto
proto/serverless/collections/v1/: collection_config.proto  collection_keys.proto  collections.proto
proto/serverless/v1/: clusters.proto  collections.proto
scripts/: cleanup-gencode-comments.sh  generate-package-json.sh  generate-service-list.py  protoc-gen-es.sh
(+19 files in other folders)
