[project]
name = "qdrant_cloud_public_api"
# The version is replaced by the version from Git branch name during the release process
version = "0.0.0"
description = "Qdrant cloud public API"
readme = "README.md"
requires-python = ">=3.12, <3.13"
authors = [
    { name = "Cloud Unit Platform", email = "cloud-unit-platform@qdrant.com" },
]

[project.urls]
Homepage = "https://github.com/qdrant/qdrant-cloud-public-api"
Repository = "https://github.com/qdrant/qdrant-cloud-public-api"


[tool.hatch.build.targets.sdist]
only-include = ["gen/python"]

[tool.hatch.build.targets.wheel]
# Include only the generated python sources
include = ["gen/python"]
# Remove prefix from the generated sources, installed package will have the structure `qdrant/cloud`
sources = ["gen/python"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["twine>=6.1.0"]


[project.optional-dependencies]
dev = []
